tests/paczka1/fuzzy1/82440845.err
Error in line 12: A833 A669 22,4
Error in line 27: b5R3wydr S527 76,7
Error in line 29: wX2Qx S527 98,3
Error in line 36: x7ZG A669 21,4
